# gestepm-model/src/main/java/com/epm/gestepm/model/signings/personal/dao/entity/PersonalSigning.java
@@ -1,6 +1,7 @@
 package com.epm.gestepm.model.signings.personal.dao.entity;
 
 import com.epm.gestepm.lib.audit.AuditCreateApprovePaidDischarge;
+import com.epm.gestepm.lib.audit.AuditUpdate;
 import lombok.Data;
 
 import javax.validation.constraints.NotNull;
@@ -8,7 +9,7 @@ import java.io.Serializable;
 import java.time.LocalDateTime;
 
 @Data
-public class PersonalSigning implements AuditCreateApprovePaidDischarge, Serializable {
+public class PersonalSigning implements AuditCreateApprovePaidDischarge, AuditUpdate, Serializable {
 
     @NotNull
     private Integer id;
@@ -22,4 +23,7 @@ public class PersonalSigning implements AuditCreateApprovePaidDischarge, Seriali
     @NotNull
     private LocalDateTime endDate;
 
+    private LocalDateTime updatedAt;
+
+    private Integer updatedBy;
 }
